--- a/src/lang/translations/en.json
+++ b/src/lang/translations/en.json
@@ -289,6 +289,56 @@
         "search": "Search",
         "today": "Today"
     }
-  }
+  },
+  "open": "Open",
+  "claimed": "Claimed",
+  "see_photo": "See all photos",
+  "next_day": "The next day",
+  "see_hours": "See  hours",
+  "write_review": "Write a review",
+  "add_photo": "Add a photo",
+  "share": "Share",
+  "save": "Save",
+  "whats" : "What's the vibe ?",
+  "inside":"Inside",
+  "outside": "Outside",
+  "all_photo":"All photos",
+  "moderate_noise":"Moderate noise",
+  "outdor_seating": "Outdoor seating",
+  "dog_allow":"Dogs allowed",
+  "hipster": "Hipster",
+  "good_for_group": "Good for groups",
+  "good_for_kid" : "Good for kids",
+  "location_schedule" : "Location & opening times",
+  "suggest_edit" : "Suggest an edit",
+  "get_direction" : "Get directions",
+  "day":"Day",
+  "openning" : "Openning",
+  "closing" : "Closing",
+  "overall_rate" : "Overall rating",
+  "review": "reviews",
+  "star": "star",
+  "stars": "stars",
+  "share_opinion" : "share the review",
+  "integre_opinion" : "integrate the review",
+  "sort_Enjoy" : "Sort Enjoy",
+  "most_recent" : "Most recent",
+  "old_review" : "Old reviews",
+  "positive_review" : "Positive reviews",
+  "negative_review" : "Negative reviews",
+  "review_elite" : "Review of elites",
+  "English(52)" : "English(52)",
+  "German(42)" : "German(42)",
+  "Spanish(10)" : "Spanish(10)",
+  "5stars" : "5 stars",
+  "4stars" : "4 stars",
+  "3stars" : "3 stars",
+  "2stars" : "2 stars",
+  "1star" : "1 star",
+  "All_rating": "All rating",
+  "hepful":"Hepful",
+  "thanks":"Thanks",
+  "lovethis" : "Love this",
+  "ohno" : "Oh no"
 
 }
