--- a/src/lang/translations/fr.json
+++ b/src/lang/translations/fr.json
@@ -287,5 +287,59 @@
         "search": "Chercher",
         "today": "Aujourd’hui"
     }
-  }
+  },
+  "open": "Ouvert",
+  "claimed": "Revendiqué",
+  "see_photo":"Voir toutes les photos",
+  "next_day":"Le jour suivant",
+  "see_hours":"Voir les heures",
+  "write_review": "Écrire un avis",
+  "add_photo": "Ajouter une photo",
+  "share": "Partager",
+  "save": "Sauvegarder",
+  "whats" : "quelle est l'ambiance ?",
+  "inside":"À l'intérieur",
+  "outside": "À l'extérieureur", 
+  "all_photo":"Toutes les photos",
+  "moderate_noise":"Bruit modéré",
+  "outdor_seating": "Sièges extérieurs",
+  "dog_allow":"Chiens acceptés",
+  "hipster": "Hipster",
+  "good_for_group": "Bon pour les groupes",
+  "good_for_kid" : "Bon pour les enfants",
+  "location_schedule" : "Emplacement & horaires",
+  "suggest_edit" : "Suggérer une modification",
+  "get_direction" : "Obtenir l'itinéraire",
+  "day":"Jour",
+  "openning" : "Ouverture",
+  "closing" : "Fermeture",
+  "overall_rate" : "Note globale",
+  "review": "avis",
+  "star": "étoile",
+  "stars": "étoiles",
+  "share_opinion" : "partager l'avis",
+  "integre_opinion" : "intergrer l'avis",
+  "sort_Enjoy" : "Tri Enjoy",
+  "most_recent" : "Les plus recents",
+  "old_review" : "Avis anciens",
+  "positive_review" : "Avis positifs",
+  "negative_review" : "Avis négatifs",
+  "review_elite" : "Avis d'elites",
+  "English(52)": "Anglais(52)",
+  "German(42)" : "Allemand(42)",
+  "Spanish(10)" : "Espagnol(10)",
+  "5stars": "5 étoiles",
+  "4stars": "4 étoiles",
+  "3stars": "3 étoiles",
+  "2stars": "2 étoiles",
+  "1star": "1 étoile",
+  "All_rating": "Toutes les notes",
+  "hepful":"Utile",
+  "thanks":"Merci",
+  "lovethis" : "J'adore ça",
+  "ohno" : "oh non"
+  
+
+  
+
 }
