continu to build interface research hotel

--- a/src/lang/translations/en.json
+++ b/src/lang/translations/en.json
@@ -293,6 +293,9 @@
       "hotelAnnouncement": "Make your reservation now and pay at the hotel. Cancellation is free.",
       "arrival": "Arrival",
       "departure": "Departure",
+      "destination": "Destination",
+      "persons": "Person(s)",
+      "rooms": "Room(s)",
       "travelers": "Travelers"
     }
   }
