continue to build interface to hotel suite

--- a/src/lang/translations/en.json
+++ b/src/lang/translations/en.json
@@ -295,6 +295,7 @@
       "departure": "Departure",
       "destination": "Destination",
       "persons": "Person(s)",
+      "room": "Room",
       "rooms": "Room(s)",
       "travelers": "Travelers"
     }
