--- a/src/lang/translations/fr.json
+++ b/src/lang/translations/fr.json
@@ -293,6 +293,7 @@
           "departure": "Depart",
           "destination": "Destination",
           "persons": "Personne(s)",
+          "room": "Chambre",
           "rooms": "Chambre(s)",
           "travelers": "Voyageurs"
         }
