--- a/src/lang/translations/fr.json
+++ b/src/lang/translations/fr.json
@@ -297,7 +297,7 @@
   "add_photo": "Ajouter une photo",
   "share": "Partager",
   "save": "Sauvegarder",
-  "whats" : "quelle est l'ambiance ?",
+  "whats" : "Quelle est l'ambiance ?",
   "inside":"À l'intérieur",
   "outside": "À l'extérieureur", 
   "all_photo":"Toutes les photos",
