upgrate ui agency,home,and responsive

--- a/src/lang/translations/en.json
+++ b/src/lang/translations/en.json
@@ -29,6 +29,7 @@
   "info": "Info",
   "Plus": "More",
   "Moins": "Less",
+  "hotel": "Hotel",
   
   "navbar": {
     "space": "Current Location",
