--- a/src/lang/translations/fr.json
+++ b/src/lang/translations/fr.json
@@ -29,6 +29,7 @@
   "info": "Infos",
   "Plus": "Plus",
   "Moins": "Moins",
+  "hotel": "Hôtel",
   
   "navbar": {
     "space": "Emplacement actuel",
