--- a/src/lang/translations/en.json
+++ b/src/lang/translations/en.json
@@ -30,6 +30,7 @@
   "Plus": "More",
   "Moins": "Less",
   "hotel": "Hotel",
+  "read": "Read",
   
   "navbar": {
     "space": "Current Location",
@@ -162,7 +163,8 @@
   },
   
   "price": "Price",
-  "filter": "Filters",
+  "rating": "Rating",
+  "filterBy": "Filter by",
   "suggested": "Suggested",
   "categorie": "Category",
   "feature": "Features",
@@ -293,6 +295,8 @@
     "hotel": {
       "hotelAnnouncement": "Make your reservation now and pay at the hotel. Cancellation is free.",
       "arrival": "Arrival",
+      "per": "per",
+      "night": "night",
       "departure": "Departure",
       "destination": "Destination",
       "persons": "Person(s)",
@@ -303,7 +307,81 @@
       "addRoom": "Add room",
       "deleteRoom" : "Delete room",
       "travelers": "Travelers",
-      "valid": "Validate"
+      "valid": "Validate",
+      "displayCard": "Display the card", 
+      "viewDeal": "View deal",
+      "filterBy": "Filter by",
+      "pricePerNight": "Price per night",
+      "starRating": "Star rating",
+      "amenities": "Amenities",
+      "freeWifi": "Free WiFi",
+      "fitnessCenter": "Fitness center",
+      "review": "Review",
+      "rating": "Rating",
+      "includeTaxesFees": "Include taxes & fees",
+      "sortBy": "Sort by",
+      "recommended": "Recommended",
+      "price": "Price",
+      "low": "Low",
+      "high": "High",
+      "to": "To",
+      "guestRating": "Guest rating",
+      "found": "Found",
+      "min": "Min",
+      "max": "Max",
+      "beds": "Beds",
+      "area": "Area",
+      "guests": "Guests",
+      "bathroom": "Bathroom",
+      "floor": "Floor",
+      "getStarted": "Get started",
+      "readMore": "Read more",
+      "enterYourDetails": "Enter your details",
+      "addToStay": "Add to stay",
+      "night": "Night",
+      "requestToBook": "Request to book",
+      "reservationSummary": "Reservation summary",
+      "checkIn": "CHECK-IN",
+      "checkOut": "CHECK-OUT",
+      "youSelected": "You selected",
+      "yourPriceSummary": "Your price summary",
+      "roomAndOffer": "Room and offer",
+      "changeYourSelection": "Change your selection",
+      "weRunOnEnjoyInc": "We run on Enjoy Inc",
+      "breakfastIncluded": "Breakfast Included",
+      "quitCard": "Quit the card",
+      "datesRooms": "Dates & Rooms",
+      "extras": "Extras",
+      "payment": "Payment",
+      "confirmation": "Confirmation",
+      "bestChoice": "Best choice",
+      "paySecurely": " Pay securly",
+      "downloadInvoice": "Download Invoice",
+      "total": "Total",
+      "totalOfLengthStay": "TOTAL LENGTH OF STAY",
+      "cityTax": "City tax:",
+      "8%VAT": "8 % VAT",
+      "RoomsAndOffer":"Rooms and offer:",
+      "bookingConfirmed": "Your booking is confirmed",
+      "bookingDetails": "Booking details",
+      "guest": "GUEST",
+      "yourReservation": "YOUR RESERVATION",
+      "nightsApartment": "3 Nights, 1 Apartment",
+      "phone": "PHONE",
+      "email": "EMAIL",
+      "bookingNumber": "BOOKING NUMBER",
+      "parkingTicket": "Parking ticket",
+      "parkingInfo": "Entrance to parking area is possible only with parking ticket ",
+      "parkingInfo1": "issued by parking entrance machine. ",
+
+      "parkingQRCode": "Parking QR Code",
+      "carPark": "CART PARK",
+      "carDetails": "Car, 3 nights",
+      "parkingPlace": "Place C-124 on 1st Floor",
+      "downloadParkingTicket": "Download parking Ticket"
+
+
+
     }
   },
   "open": "Open",
