--- a/src/lang/translations/fr.json
+++ b/src/lang/translations/fr.json
@@ -30,6 +30,8 @@
   "Plus": "Plus",
   "Moins": "Moins",
   "hotel": "Hôtel",
+  "read": "Lire",
+
 
   
   "navbar": {
@@ -292,6 +294,7 @@
     "hotel": {
       "hotelAnnouncement": "Effectuez votre réservation maintenant et réglez à l'hôtel. L'annulation est gratuite.",
       "arrival": "Arrivee",
+      "per": "par",
       "departure": "Depart",
       "destination": "Destination",
       "persons": "Personne(s)",
@@ -302,7 +305,80 @@
       "addRoom": "Ajouter une chambre",
       "deleteRoom" : "Supprimer une chambre",
       "travelers": "Voyageurs",
-      "valid": "Valider"
+      "valid": "Valider",
+      "displayCard": "Afficher la carte",
+      "viewDeal": "Voir l’offre",
+      "filterBy": "Filtrer par",
+      "pricePerNight": "Prix par nuit",
+      "starRating": "Classement par étoiles",
+      "amenities": "Équipements",
+      "freeWifi": "WiFi gratuit",
+      "fitnessCenter": "Salle de sport",
+      "review": "Avis",
+      "rating": "Évaluation",
+      "includeTaxesFees": "Inclure les taxes et frais",
+      "sortBy": "Trier par",
+      "recommended": "Recommandé",
+      "price": "Prix",
+      "low": "Bas",
+      "high": "Élevé",
+      "to": "À",
+      "guestRating": "Évaluation des clients",
+      "found": "Trouvé",
+      "min": "Min",
+      "max": "Max",
+      "beds": "Lits",
+      "area": "Surface",
+      "guests": "Invités",
+      "bathroom": "Salle de bain",
+      "floor": "Étage",
+      "getStarted": "Commencer",
+      "readMore": "Lire plus",
+      "enterYourDetails": "Entrez vos informations",
+      "addToStay": "Ajouter au séjour",
+      "night": "Nuit",
+      "requestToBook": "Demander une réservation",
+      "reservationSummary": "Résumé de la réservation",
+      "checkIn": "Arrivée",
+      "checkOut": "Départ",
+      "youSelected": "Vous avez sélectionné",
+      "yourPriceSummary": "Résumé de votre prix",
+      "roomAndOffer": "Chambre et offre",
+      "breakfastIncluded": "Petit-déjeuner inclus",
+      "changeYourSelection": "Modifier votre sélection",
+      "weRunOnEnjoyInc": "Nous fonctionnons sur Enjoy Inc",
+      "quitCard": "Quitter la carte",
+      "datesRooms": "Dates & Chambres",
+      "extras": "Extras",
+      "payment": "Paiement",
+      "confirmation": "Confirmation",
+      "bestChoice": "Meilleur choix",
+      "paySecurely": "Payer en toute sécurité",
+      "downloadInvoice": "Télécharger la facture",
+      "total": "Total",
+      "totalOfLengthStay": "DURÉE TOTALE DU SÉJOUR",
+      "cityTax": "Taxe ville:",
+      "8%VAT": "8 % TVA",
+      "RoomsAndOffer":"Chambres et Offres:",
+      "bookingConfirmed": "Votre réservation est confirmée",
+      "bookingDetails": "Détails de la réservation",
+      "guest": "INVITÉ",
+      "yourReservation": "VOTRE RÉSERVATION",
+      "nightsApartment": "3 Nuits, 1 Appartement",
+      "phone": "TÉLÉPHONE",
+      "email": "E-MAIL",
+      "bookingNumber": "NUMÉRO DE RÉSERVATION",
+      "parkingTicket": "Ticket de parking",
+      "parkingInfo": "L'entrée au parking est possible uniquement avec un ticket de parking",
+      "parkingQRCode": "QR Code du parking",
+      "carPark": "PARKING",
+      "carDetails": "Voiture, 3 nuits",
+      "parkingPlace": "Place C-124 au 1er étage",
+      "downloadParkingTicket": "Télécharger le ticket de parking",
+      "parkingInfo1": "délivré par la machine d'entrée du parking.. "
+
+
+
     }
   },
   "open": "Ouvert",
